<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_PFEIFFER_TO_PTM" Id="{52e32b74-ae54-4ccd-ade3-e43f2f9c5233}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PFEIFFER_TO_PTM
VAR_IN_OUT
    {attribute 'pytmc' :=' pv:'}
    iq_stPTM: ST_PfeifferPTM;
    iq_stPfeiffer_ctrl: ST_PfeifferControl;
    iq_stPfeiffer_stat: ST_PfeifferStatus;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* This function block is used to map the IO points from the pfeiffer structures
to the generic turbo structures *)

(* Controls *)
iq_stPfeiffer_ctrl.xPumpingStation_010 := iq_stPTM.q_RunDO;
iq_stPfeiffer_ctrl.xMotorPump_023 := 1; //Setting always true because parameter 10 alone can enable/disable the pump
iq_stPfeiffer_ctrl.uiPowerPct_708 := iq_stPTM.q_uiPowerPct;
iq_stPfeiffer_ctrl.xErrorAck_009 := iq_stPTM.xResetSW;

(* Readbacks *)
iq_stPTM.i_xAccel := iq_stPfeiffer_stat.xPumpAccelerating_307;
iq_stPTM.i_xAtSpd := iq_stPfeiffer_stat.xRotationSpeedAttn_306;
iq_stPTM.i_diCurSpd := iq_stPfeiffer_stat.diActiveRotationSpeed_309;
iq_stPTM.i_diPwr := iq_stPfeiffer_stat.diDrivePower_316;
iq_stPTM.i_diElecTemp := iq_stPfeiffer_stat.diTempElec_326;
iq_stPTM.i_diBtmTemp := iq_stPfeiffer_stat.diTempPmpBot_330;
iq_stPTM.i_diBrngTemp := iq_stPfeiffer_stat.diTempBearng_342;
iq_stPTM.i_diMtrTemp := iq_stPfeiffer_stat.diTempMotor_346;
iq_stPTM.i_uiPowerPctRbk := iq_stPfeiffer_stat.uiPowerPct_708;

iq_stPTM.xCommTimeout	:=	iq_stPfeiffer_stat.xTimeout;
iq_stPTM.i_iErrorCode := iq_stPfeiffer_stat.iErrorCode_303;
iq_stPTM.i_iWarningCode := iq_stPfeiffer_stat.iWarningCode_303;

(* Check that error acknowledgment is processed*)
IF iq_stPfeiffer_stat.xErrorAcknowledged THEN
    iq_stPfeiffer_stat.xErrorAcknowledged := FALSE;
    iq_stPfeiffer_ctrl.xErrorAck_009 := FALSE;
    iq_stPTM.xResetSW := FALSE;
END_IF

IF iq_stPfeiffer_stat.sErrorCode_303 = '' THEN
    ;
ELSIF iq_stPfeiffer_stat.sErrorCode_303 <> '000000' THEN
iq_stPTM.i_xFault := TRUE;
ELSE
iq_stPTM.i_xFault := FALSE;
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>